fixed problem with overlapping

--- a/css/layout.css
+++ b/css/layout.css
@@ -7,44 +7,9 @@
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 	padding: 0 0 10px 0
+	-webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+	box-shadow: 0 1px 4px rgba(0,0,0,0.2);
 }
-
-
-
-
-.box.red {
-	border: 2px solid #A21111;
-}
-
-.box.red h3 {
-	background-color: #A21111;
-}
-
-.box.green {
-	border: 2px solid #28A528;
-}
-
-.box.green h3 {
-	background-color: #28A528;
-}
-
-.box.blue {
-	border: 2px solid #063186;
-}
-
-.box.blue h3 {
-	background-color: #063186;
-}
-
-h3 {
-	margin-top: 0px;
-	color: white;
-	text-shadow: 0 1px 0 #000;
-}
-
-
-
-
 
 .google-yellow {
 	color: #EEB211;
@@ -100,20 +65,11 @@ h3 {
 	font-weight: bold;
 }
 
-.right {
-	float: right;
-}
-
-.left {
-	float: left;
-}
-
-.clear {
-	float: none;
-	clear: both;
-}
-
 .navbar {
 	vertical-align: middle;
+}
+
+.content {
+	 margin: 64px auto;
 }
 
